--- a/index.html
+++ b/index.html
@@ -54,14 +54,15 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <main class="landing-container">
+    <main class="container">
       <div class="landing-section">
         <img
-          src="/images/landing.webp"
+          src="public/images/landing.webp"
           alt="Detail page"
           class="landing-image"
         />
       </div>
+      <div class="landing-wavy-border"></div>
       <div class="preorder-section">
         <div class="preorder-animate">
           <h2 class="preorder-title">에냥이와 테냥이의<br />공감 이모티콘</h2>
