fix: correct file path to enable download on button click

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="preorder-animate">
           <h2 class="preorder-title">에냥이와 테냥이의<br />공감 이모티콘</h2>
           <p class="preorder-desc">지금, 샘플로 먼저 만나보세요</p>
-          <button class="preorder-btn" id="download-zip-btn">
+          <button class="preorder-btn" id="download-sample-btn">
             🎁 사전예약하고 샘플 받기
           </button>
           <p class="preorder-sample-info">
