--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
     />
 
     <link rel="stylesheet" href="styles.css" />
+    <!-- Favicon -->
+    <link
+      rel="icon"
+      href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 120 120%22><text y=%2296%22 font-size=%22100%22>🐾</text></svg>"
+    />
   </head>
   <body>
     <main class="container">
