style: Enhance email form responsive design

--- a/index.html
+++ b/index.html
@@ -97,14 +97,16 @@
         <div class="preorder-animate">
           <h2 class="preorder-title">에냥이와 테냥이의<br />공감 이모티콘</h2>
           <p class="preorder-desc">지금, 샘플로 먼저 만나보세요</p>
-          <input
-            type="email"
-            id="email-input"
-            placeholder="이메일을 입력해주세요"
-          />
-          <button class="preorder-btn" id="download-sample-btn">
-            🎁 사전예약하고 샘플 받기
-          </button>
+          <div class="preorder-form">
+            <input
+              type="email"
+              id="email-input"
+              placeholder="이메일을 입력해주세요"
+            />
+            <button class="preorder-btn" id="download-sample-btn">
+              사전예약하고 샘플받기
+            </button>
+          </div>
           <p class="preorder-sample-info">
             사전예약 시 4종 샘플 이모티콘 ZIP 파일 즉시 다운로드
           </p>
