--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <!-- Favicon -->
     <link
       rel="icon"
-      href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 120 120%22><text y=%2296%22 font-size=%22100%22>🐾</text></svg>"
+      href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 200 200%22><defs><style>.st0{fill:%23FFB6B6;}.st1{fill:%23FFFFFF;}</style></defs><g><path class=%22st0%22 d=%22M129.64,37.16c13.54,4.44,18.35,52.97-12.12,49.85C87.06,83.89,108.52,30.23,129.64,37.16z%22/><path class=%22st0%22 d=%22M171.32,81.62c7.6,10.61-15.11,49.08-35.94,30.28C114.55,93.11,159.46,65.07,171.32,81.62z%22/><path class=%22st0%22 d=%22M27.33,77.83c8.82-9.62,51.13,4.7,37.02,28.95C50.25,131.02,13.58,92.84,27.33,77.83z%22/><path class=%22st0%22 d=%22M71.63,36.69c13.95-2.89,42.3,36.79,14.33,49.26C57.99,98.43,49.87,41.21,71.63,36.69z%22/><path class=%22st0%22 d=%22M99.04,87.3c-11.02,0.61-19.66,5.32-25.15,15.74c-3.15,5.97-6,10.81-14.28,21.22c-8.27,10.41-2.76,35.07,16.22,32.64c18.98-2.43,15.09-4.38,23.2-3.41c8.11,0.97,32.8,11.03,39.26-9.41c5.74-18.13-2.6-20.93-10.71-31.8C119.48,101.41,116.56,86.32,99.04,87.3z%22/></g></svg>"
     />
   </head>
   <body>
@@ -113,6 +113,7 @@
         </div>
       </div>
     </main>
+
     <script src="main.js"></script>
   </body>
 </html>
