--- a/index.html
+++ b/index.html
@@ -84,7 +84,14 @@
       ></iframe
     ></noscript>
     <!-- End Google Tag Manager (noscript) -->
+
     <main class="container">
+      <div class="video-section">
+        <video class="promo-video" autoplay muted loop playsinline>
+          <source src="public/videos/intro.mp4" type="video/mp4" />
+          Your browser does not support the video tag.
+        </video>
+      </div>
       <div class="landing-section">
         <img
           src="public/images/landing.webp"
@@ -92,7 +99,7 @@
           class="landing-image"
         />
       </div>
-      <div class="landing-wavy-border"></div>
+
       <div class="preorder-section">
         <div class="preorder-animate">
           <h2 class="preorder-title">에냥이와 테냥이의<br />공감 이모티콘</h2>
