--- a/index.html
+++ b/index.html
@@ -87,9 +87,8 @@
 
     <main class="container">
       <div class="video-section">
-        <video class="promo-video" autoplay muted loop playsinline>
+        <video class="promo-video" autoplay muted loop playsinline controls>
           <source src="public/videos/intro.mp4" type="video/mp4" />
-          Your browser does not support the video tag.
         </video>
       </div>
       <div class="landing-section">
