feat: add ogImage

--- a/index.html
+++ b/index.html
@@ -39,8 +39,14 @@
       property="og:description"
       content="사전예약만 해도 공감 이모티콘 샘플 4종 무료 다운로드! 에냥이와 테냥이의 감성 톡을 미리 만나보세요."
     />
-    <meta property="og:image" content="" />
-    <meta property="og:url" content="https://your-domain.com/" />
+    <meta
+      property="og:image"
+      content="https://github.com/user-attachments/assets/46fcf43a-27e8-43f7-9469-8ad6d224440f"
+    />
+    <meta
+      property="og:url"
+      content="https://jiaah.github.io/presale-landing/"
+    />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta
@@ -51,7 +57,14 @@
       name="twitter:description"
       content="사전예약하면 공감 이모티콘 샘플을 바로 다운로드!"
     />
-    <meta name="twitter:image" content="" />
+    <meta
+      name="twitter:image"
+      content="https://github.com/user-attachments/assets/46fcf43a-27e8-43f7-9469-8ad6d224440f"
+    />
+    <meta
+      name="twitter:url"
+      content="https://jiaah.github.io/presale-landing/"
+    />
     <!-- Fonts -->
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700;900&display=swap"
