feat: change images

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       name="keywords"
       content="이모티콘, 사전예약, 에냥이, 테냥이, 샘플 다운로드, 카카오톡, LINE, 감성, 공감, 다양성"
     />
-    <meta name="author" content="EN Yang & TE Yang" />
+    <meta name="author" content="ozSchool 13 - 3 team" />
     <!-- Meta Tags for Open Graph -->
     <meta property="og:type" content="website" />
     <meta
@@ -41,12 +41,21 @@
     />
     <meta
       property="og:image"
-      content="https://github.com/user-attachments/assets/46fcf43a-27e8-43f7-9469-8ad6d224440f"
+      content="https://jiaah.github.io/presale-landing/public/images/og-image.png"
     />
     <meta
       property="og:url"
       content="https://jiaah.github.io/presale-landing/"
     />
+    <meta property="og:site_name" content="에냥이와 테냥이 이모티콘" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta
+      property="og:image:alt"
+      content="에냥이와 테냥이 공감 이모티콘 사전예약"
+    />
+    <meta property="og:locale" content="ko_KR" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta
@@ -59,12 +68,17 @@
     />
     <meta
       name="twitter:image"
-      content="https://github.com/user-attachments/assets/46fcf43a-27e8-43f7-9469-8ad6d224440f"
+      content="https://jiaah.github.io/presale-landing/public/images/og-image.png"
     />
     <meta
       name="twitter:url"
       content="https://jiaah.github.io/presale-landing/"
     />
+    <meta
+      name="twitter:image:alt"
+      content="에냥이와 테냥이 공감 이모티콘 사전예약"
+    />
+
     <!-- Fonts -->
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700;900&display=swap"
@@ -114,7 +128,10 @@
 
       <div class="preorder-section">
         <div class="preorder-animate">
-          <h2 class="preorder-title">에냥이와 테냥이의<br />공감 이모티콘</h2>
+          <h2 class="preorder-title">
+            에냥이와 테냥이의<br />
+            공감 이모티콘
+          </h2>
           <p class="preorder-desc">지금, 샘플로 먼저 만나보세요</p>
           <div class="preorder-form">
             <input
