feat: update title from "공감 이모티콘" to "감정로그"

--- a/index.html
+++ b/index.html
@@ -128,10 +128,7 @@
 
       <div class="preorder-section">
         <div class="preorder-animate">
-          <h2 class="preorder-title">
-            에냥이와 테냥이의<br />
-            공감 이모티콘
-          </h2>
+          <h2 class="preorder-title">에냥이와 테냥이의 감정로그</h2>
           <p class="preorder-desc">지금, 샘플로 먼저 만나보세요</p>
           <div class="preorder-form">
             <input
