feat: add preview UI similar to KakaoTalk emoticon sales page

--- a/index.html
+++ b/index.html
@@ -125,11 +125,40 @@
           class="landing-image"
         />
       </div>
+      <div class="animate">
+        <section class="emoticon-section">
+          <div class="emoticon-container">
+            <div class="emoticon-header">
+              <h2 class="emoticon-title">현실 직장냥, 에냥이 & 테냥이 🐾</h2>
+              <p class="preorder-desc">
+                24가지 표정으로 말 대신 냥으로 표현해!
+              </p>
+            </div>
 
-      <div class="preorder-section">
-        <div class="preorder-animate">
-          <h2 class="preorder-title">에냥이와 테냥이의 감정로그</h2>
-          <p class="preorder-desc">지금, 샘플로 먼저 만나보세요</p>
+            <div class="emoticon-grid">
+              <div class="emoticon-column">
+                <h3 class="emoticon-character">에냥이</h3>
+                <div class="emoticon-box">
+                  <div class="emoticon-flex" id="female-emoticons">
+                    <!-- JavaScript로 동적 생성 -->
+                  </div>
+                </div>
+              </div>
+
+              <div class="emoticon-column">
+                <h3 class="emoticon-character">테냥이</h3>
+                <div class="emoticon-box">
+                  <div class="emoticon-flex" id="male-emoticons">
+                    <!-- JavaScript로 동적 생성 -->
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="preorder-section">
+          <p class="preorder-desc">지금, 샘플로 먼저 만나보세요 👀</p>
           <div class="preorder-form">
             <input
               type="email"
@@ -140,13 +169,13 @@
               사전예약하고 샘플받기
             </button>
           </div>
-          <p class="preorder-sample-info">
+          <p class="preorder-note">
             사전예약 시 4종 샘플 이모티콘 ZIP 파일 즉시 다운로드
           </p>
-        </div>
+        </section>
       </div>
     </main>
 
-    <script src="main.js"></script>
+    <script src="./main.js"></script>
   </body>
 </html>
