style: improve spacing and layout

--- a/index.html
+++ b/index.html
@@ -113,12 +113,12 @@
     <!-- End Google Tag Manager (noscript) -->
 
     <main class="container">
-      <div class="video-section">
+      <div class="video-box">
         <video class="promo-video" autoplay muted loop playsinline controls>
           <source src="public/videos/intro.mp4" type="video/mp4" />
         </video>
       </div>
-      <div class="landing-section">
+      <div class="landing-box">
         <img
           src="public/images/landing.webp"
           alt="Detail page"
@@ -131,7 +131,7 @@
             <div class="emoticon-header">
               <h2 class="emoticon-title">현실 직장냥, 에냥이 & 테냥이 🐾</h2>
               <p class="preorder-desc">
-                24가지 표정으로 말 대신 냥으로 표현해!
+                24가지 표정으로 말 대신 냥으로 표현해보세요!
               </p>
             </div>
 
@@ -157,8 +157,8 @@
           </div>
         </section>
 
-        <section class="preorder-section">
-          <p class="preorder-desc">지금, 샘플로 먼저 만나보세요 👀</p>
+        <div class="preorder-box">
+          <p class="preorder-desc">지금, 샘플로 먼저 만나보기 👀</p>
           <div class="preorder-form">
             <input
               type="email"
@@ -170,9 +170,9 @@
             </button>
           </div>
           <p class="preorder-note">
-            사전예약 시 4종 샘플 이모티콘 ZIP 파일 즉시 다운로드
+            사전예약 시 4종 샘플 이모티콘 ZIP 파일을 즉시 다운로드
           </p>
-        </section>
+        </div>
       </div>
     </main>
 
