style: improve styles and update text

--- a/index.html
+++ b/index.html
@@ -129,10 +129,10 @@
         <section class="emoticon-section">
           <div class="emoticon-container">
             <div class="emoticon-header">
-              <h2 class="emoticon-title">현실 직장냥, 에냥이 & 테냥이 🐾</h2>
-              <p class="preorder-desc">
-                24가지 표정으로 말 대신 냥으로 표현해보세요!
-              </p>
+              <h2 class="emoticon-title">
+                현실 직장냥, 출근은 했지만 마음은 퇴근 🐾
+              </h2>
+              <p class="preorder-desc">24가지 표정으로 오늘을 표현해보세요!</p>
             </div>
 
             <div class="emoticon-grid">
