refactor: restructure HTML and CSS for better maintainability

--- a/index.html
+++ b/index.html
@@ -127,52 +127,50 @@
       </div>
       <div class="animate">
         <section class="emoticon-section">
-          <div class="emoticon-container">
-            <div class="emoticon-header">
-              <h2 class="emoticon-title">
-                현실 직장냥, 출근은 했지만 마음은 퇴근 🐾
-              </h2>
-              <p class="preorder-desc">24가지 표정으로 오늘을 표현해보세요!</p>
-            </div>
+          <header class="emoticon-header">
+            <h1 class="emoticon-title">
+              현실 직장냥, 출근은 했지만 마음은 퇴근 🐾
+            </h1>
+            <p class="emoticon-desc">24가지 표정으로 오늘을 표현해보세요!</p>
+          </header>
 
-            <div class="emoticon-grid">
-              <div class="emoticon-column">
-                <h3 class="emoticon-character">에냥이</h3>
-                <div class="emoticon-box">
-                  <div class="emoticon-flex" id="female-emoticons">
-                    <!-- JavaScript로 동적 생성 -->
-                  </div>
-                </div>
-              </div>
-
-              <div class="emoticon-column">
-                <h3 class="emoticon-character">테냥이</h3>
-                <div class="emoticon-box">
-                  <div class="emoticon-flex" id="male-emoticons">
-                    <!-- JavaScript로 동적 생성 -->
-                  </div>
+          <div class="emoticon-grid">
+            <div class="emoticon-column">
+              <h2 class="emoticon-character">에냥이</h2>
+              <div class="emoticon-box">
+                <div class="emoticon-flex" id="female-emoticons">
+                  <!-- JavaScript로 동적 생성 -->
                 </div>
               </div>
             </div>
+
+            <div class="emoticon-column">
+              <h2 class="emoticon-character">테냥이</h2>
+              <div class="emoticon-box">
+                <div class="emoticon-flex" id="male-emoticons">
+                  <!-- JavaScript로 동적 생성 -->
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="preorder-box">
+            <p class="preorder-desc">지금, 샘플로 먼저 만나보기 👀</p>
+            <div class="preorder-form">
+              <input
+                type="email"
+                id="email-input"
+                placeholder="이메일을 입력해주세요"
+              />
+              <button class="preorder-btn" id="download-sample-btn">
+                사전예약하고 샘플받기
+              </button>
+            </div>
+            <p class="preorder-note">
+              사전예약 시 4종 샘플 이모티콘 ZIP 파일 즉시 다운로드
+            </p>
           </div>
         </section>
-
-        <div class="preorder-box">
-          <p class="preorder-desc">지금, 샘플로 먼저 만나보기 👀</p>
-          <div class="preorder-form">
-            <input
-              type="email"
-              id="email-input"
-              placeholder="이메일을 입력해주세요"
-            />
-            <button class="preorder-btn" id="download-sample-btn">
-              사전예약하고 샘플받기
-            </button>
-          </div>
-          <p class="preorder-note">
-            사전예약 시 4종 샘플 이모티콘 ZIP 파일을 즉시 다운로드
-          </p>
-        </div>
       </div>
     </main>
 
