feat: add video skeleton

--- a/index.html
+++ b/index.html
@@ -114,7 +114,15 @@
 
     <main class="container">
       <div class="video-box">
-        <video class="promo-video" autoplay muted loop playsinline controls>
+        <video
+          class="promo-video"
+          autoplay
+          muted
+          loop
+          playsinline
+          controls
+          preload="auto"
+        >
           <source src="public/videos/intro.mp4" type="video/mp4" />
         </video>
       </div>
