feat: update CTA area text

--- a/index.html
+++ b/index.html
@@ -139,7 +139,10 @@
             <h1 class="emoticon-title">
               현실 직장냥, 출근은 했지만 마음은 퇴근 🐾
             </h1>
-            <p class="emoticon-desc">24가지 표정으로 오늘을 표현해보세요!</p>
+            <p class="emoticon-desc">
+              당신의 하루, 직장냥이 말해줄게.<br />
+              오늘의 기분을 이모티콘과 배경으로 표현해보세요!
+            </p>
           </header>
 
           <div class="emoticon-grid">
@@ -175,7 +178,7 @@
               </button>
             </div>
             <p class="preorder-note">
-              사전예약 시 8종 샘플 이모티콘 ZIP 파일 즉시 다운로드
+              사전예약 시 샘플 8종 ZIP 파일 즉시 다운로드
             </p>
           </div>
         </section>
