feat: update CTA area text

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             </h1>
             <p class="emoticon-desc">
               당신의 하루, 직장냥이 말해줄게.<br />
-              오늘의 기분을 이모티콘과 배경으로 표현해보세요!
+              오늘의 기분을 이모티콘으로 표현해보세요!
             </p>
           </header>
 
