--- a/index.html
+++ b/index.html
@@ -113,25 +113,32 @@
     <!-- End Google Tag Manager (noscript) -->
 
     <main class="container">
-      <div class="video-box">
-        <video
-          class="promo-video"
-          autoplay
-          muted
-          loop
-          playsinline
-          controls
-          preload="auto"
-        >
-          <source src="public/videos/intro.mp4" type="video/mp4" />
-        </video>
-      </div>
-      <div class="landing-box">
-        <img
-          src="public/images/landing.webp"
-          alt="Detail page"
-          class="landing-image"
-        />
+      <div class="info-box">
+        <div class="video-box">
+          <video
+            class="promo-video"
+            autoplay
+            muted
+            loop
+            playsinline
+            controls
+            preload="auto"
+          >
+            <source src="public/videos/intro.mp4" type="video/mp4" />
+          </video>
+          <div class="video-cta">
+            <button class="video-preorder-btn" id="video-download-btn">
+              사전예약하고 샘플받기
+            </button>
+          </div>
+        </div>
+        <div class="landing-box">
+          <img
+            src="public/images/landing.png"
+            alt="Detail page"
+            class="landing-image"
+          />
+        </div>
       </div>
       <div class="animate">
         <section class="emoticon-section">
